# rumbo

./: .env.example  .gitignore  .npmrc  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy-api.yml  desktop-release.yml  mobile-build.yml
.husky/: pre-push
apps/api/: Dockerfile  package.json  tsconfig.json  wrangler.toml
apps/api/src/: app.ts  index.ts  test-setup.ts
apps/api/src/__tests__/: auth-endpoints.test.ts  openapi-docs.test.ts
apps/api/src/lib/: auth-middleware.ts  auth.ts  db.ts  email.ts  error-handler.ts  error-schemas.ts  errors.ts  password.ts
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  metro.config.js  package.json
apps/mobile/src/app/: _layout.tsx
apps/web/: Dockerfile  components.json  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
docs/: ARCHITECTURE.md  PROJECT_DEFINITION.md  README.md  SECURITY_PRIVACY.md  TECH_STACK.md
docs/designs/: 2026-02-17-local-setup-design.md
docs/plans/: 2026-02-17-cicd-deployment-design.md  2026-02-17-cicd-deployment-plan.md  2026-02-17-cloudflare-deployment-design.md  2026-02-17-local-setup-plan.md  2026-02-27-search-filter-transactions-design.md  2026-02-27-transactions-filter-enhancements.md
tooling/biome/: biome.json  package.json
(+218 files in other folders)
